--- a/Gatsby Front-end/package.json
+++ b/Gatsby Front-end/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-forty-v2",
-  "description": "Gatsby Starter - Forty V2",
+  "name": "Health-Care Project",
+  "description": " A health-care Project , a collection of different disease prediction models",
   "version": "1.0.0",
-  "author": "Hunter Chang",
+  "author": "Khushwant , Manav , Anuradha",
   "dependencies": {
     "gatsby": "^2.19.5",
     "gatsby-plugin-manifest": "^2.2.38",
